--- a/Style/style.css
+++ b/Style/style.css
@@ -9,13 +9,14 @@ nav{
     justify-content: space-around;
     align-items: center;
     min-height: 8vh;
-    background-color: #5d4954;
+    background-color: #2c3947;
     font-family: 'Poppins', sans-serif;
+    border-bottom: 50px rgb(26, 26, 37);
 
 }
 .logo{
     color:rgb(214, 214, 214) ;
-    text-transform: uppercase;
+    text-transform: none;
     letter-spacing: 5px;
     font-size: 22px;
 
@@ -34,7 +35,7 @@ nav{
     text-decoration: none;
     letter-spacing: 3px;
     font-weight: bold;
-    font-size: 14px;
+    font-size: 18px;
 
 }
 .burger{
@@ -64,7 +65,7 @@ nav{
         right: 0px;
         height: 92vh;
         top: 8vh;
-        background-color: #5d4954;
+        background-color: #2c3947;
         display: flex;
         flex-direction: column;
         align-items: center;
